WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116137
[WINCE] Fix calls to GlyphPage::setGlyphDataForIndex()
https://bugs.webkit.org/show_bug.cgi?id=116137
Summary
[WINCE] Fix calls to GlyphPage::setGlyphDataForIndex()
Patrick R. Gansterer
Reported
2013-05-14 22:51:02 PDT
[WINCE] Fix calls to GlyphPage::setGlyphDataForIndex()
Attachments
Patch
(2.19 KB, patch)
2013-05-14 22:52 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2013-05-14 22:52:16 PDT
Created
attachment 201792
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-15 02:03:21 PDT
Comment on
attachment 201792
[details]
Patch Clearing flags on attachment: 201792 Committed
r150106
: <
http://trac.webkit.org/changeset/150106
>
WebKit Commit Bot
Comment 3
2013-05-15 02:03:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug