[WINCE] Fix calls to GlyphPage::setGlyphDataForIndex() https://bugs.webkit.org/show_bug.cgi?id=116137

Reviewed by Andreas Kling.

Use zero for the glyp when the fontData pointer is null.
This aligns GlyphPageTreeNodeWinCE with the other implementations
and makes all ASSERT() pass in setGlyphDataForIndex().

* platform/graphics/wince/GlyphPageTreeNodeWinCE.cpp:
(WebCore::GlyphPage::fill):


Canonical link: https://commits.webkit.org/134538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150106 268f45cc-cd09-0410-ab3c-d52691b4dbfc